# camera_calibration

ImageSourceCameraCleanCapture/: CMakeLists.txt
ImageSourceCameraCleanCapture/src/: talker.cpp
ImagingSouce_Camera/: ReadMe.md
ImagingSourceCameraCaptureImage/src/: CMakeLists.txt  cam_stereo_online_left.yml  inputimage.txt  package.xml  readme.md
ImagingSourceCameraCaptureImage/src/cfg/: Tutorials.cfg
ImagingSourceCameraCaptureImage/src/config/: Robotcam_stereo.yml  cam_stereo.yml  inputimage.txt  x.csv  x_inter.csv  y.csv  y_inter.csv
ImagingSourceCameraCaptureImage/src/msg/: my_msg.msg
ImagingSourceCameraCaptureImage/src/src/: cam_stereo_online_right.yml  my_subscriber.cpp  talker.cpp  tcamcamera.cpp  tcamcamera.h
XIMEA_Camera/: ReadMe.md
